--- a/Techniques/T1085/T1085.md
+++ b/Techniques/T1085/T1085.md
@@ -10,7 +10,8 @@
 ## Execute
 ### AllTheThingsx64 would be a .DLL file and EntryPoint would be the name of the entry point in the .DLL file to execute.
 ```
-rundll32.exe AllTheThingsx64,EntryPoint, e.g. rundll32 example.dll,DllMain
+rundll32.exe AllTheThingsx64,EntryPoint
+(e.g. rundll32.exe example.dll,DllMain)
 ```
 * Usecase: Execute dll file
 * Privileges required: User
