--- a/Techniques/T1053/T1053.md
+++ b/Techniques/T1053/T1053.md
@@ -7,7 +7,7 @@
 
 # Details
 
-## Using `schtasks`
+## schtasks
 
 * Create a scheduled task, e.g. Create a scheduled task run as SYSTEM with highest privilege and no password:
 ```
