--- a/Techniques/T1219/T1219.md
+++ b/Techniques/T1219/T1219.md
@@ -8,14 +8,14 @@
 # Details
 
 ## Customized RAT
-### Creating customized `aresskit`
+### Creating customized Aresskit
 * Download the source code from [Github](https://github.com/BlackVikingPro/aresskit);
 * Replace with [Program.cs](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1219/Program.cs) and modify all `<ip_of_C2>` and `<port_of_C2>` accordingly;
 * Replace with [FileHandler.cs](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1219/FileHandler.cs);
 * Compile the program using `Debug` - `Any CPU`;
 * Copy file `aresskit.exe` under folder `.\aresskit\bin\Debug` and upload it to your C2 host;
 
-### Using customized `aresskit`
+### Using customized Aresskit
 * Start a listener on C2 host:
 ```
 nc -lvvp <port_of_C2>
