--- a/Techniques/T1216/T1216.md
+++ b/Techniques/T1216/T1216.md
@@ -47,11 +47,11 @@ C:\Users\win7x64\Desktop\release_v1.0.4\DotNetToJScript.exe -c ShellCodeLauncher
     remotable="true"
 	>
 </registration>
-	<script language="JScript">
-		<![CDATA[
-	     // Insert the content of JS file "payload.js" here
-         <content_of_payload_js>
-		]]>
+<script language="JScript">
+    <![CDATA[
+        <!-- Insert the content of JS file "payload.js" here -->
+        <content_of_payload_js>
+    ]]>
 </script>
 </scriptlet>
 ```
