--- a/Techniques/T1216/T1216.md
+++ b/Techniques/T1216/T1216.md
@@ -49,7 +49,7 @@ C:\Users\win7x64\Desktop\release_v1.0.4\DotNetToJScript.exe -c ShellCodeLauncher
 </registration>
 <script language="JScript">
     <![CDATA[
-        <!-- Insert the content of JS file "payload.js" here -->
+        // Insert the content of JS file "payload.js" here
         <content_of_payload_js>
     ]]>
 </script>
