--- a/Techniques/T1191/T1191.md
+++ b/Techniques/T1191/T1191.md
@@ -8,7 +8,7 @@
 # Details
 
 ## Execute
-Silently installs a specially formatted local .INF (e.g. [`T1191.inf`](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1191/T1191.inf)) without creating a desktop icon. The .INF file contains a UnRegisterOCXSection section which executes a .SCT (e.g. [`T1191.sct`](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1191/T1191.sct)) file using `scrobj.dll`.
+Silently installs a specially formatted local .INF (e.g. [`T1191.inf`](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1191/T1191.inf)) without creating a desktop icon. The .INF file contains a `UnRegisterOCXSection` section which executes a .SCT (e.g. [`T1191.sct`](https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1191/T1191.sct)) file using `scrobj.dll`.
 ```
 cmstp.exe /ni /ns /s C:\ClientDir\T1191.inf
 ```
