update T1216 and add T1223

--- a/Techniques/T1216/T1216.md
+++ b/Techniques/T1216/T1216.md
@@ -57,6 +57,16 @@ C:\Users\win7x64\Desktop\release_v1.0.4\DotNetToJScript.exe -c ShellCodeLauncher
 ```
 * Save the aforementioned code as a file (e.g. `payload.sct`)
 
+## hh.exe
+## Execute
+Executes `calc.exe` with HTML Help.
+```
+hh.exe c:\windows\system32\calc.exe
+```
+* Usecase: Execute process with `hh.exe`
+* Privileges required: User
+* OS: Windows vista, Windows 7, Windows 8, Windows 8.1, Windows 10
+
 # References
 
 * <https://enigma0x3.net/2017/08/03/wsh-injection-a-case-study/>
@@ -66,3 +76,4 @@ C:\Users\win7x64\Desktop\release_v1.0.4\DotNetToJScript.exe -c ShellCodeLauncher
 * <https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1216/shellcode.cs>
 * <https://github.com/brianwrf/RTEmulation/blob/master/Techniques/T1216/cmd.txt>
 * <https://github.com/tyranid/DotNetToJScript>
+* <https://lolbas-project.github.io/lolbas/Binaries/Hh/>
