--- a/Techniques/T1216/T1216.md
+++ b/Techniques/T1216/T1216.md
@@ -58,7 +58,7 @@ C:\Users\win7x64\Desktop\release_v1.0.4\DotNetToJScript.exe -c ShellCodeLauncher
 * Save the aforementioned code as a file (e.g. `payload.sct`)
 
 ## hh.exe
-## Execute
+### Execute
 Executes `calc.exe` with HTML Help.
 ```
 hh.exe c:\windows\system32\calc.exe
